--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,7 +10,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/bookmarks">Bookmarks</a>
       <a mat-list-item routerLink="/tags">Tags</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/profile">Profile</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
