add test ngModel in ngFor

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,6 +11,7 @@
       <a mat-list-item routerLink="/bookmarks">Bookmarks</a>
       <a mat-list-item routerLink="/tags">Tags</a>
       <a mat-list-item routerLink="/profile">Profile</a>
+      <a mat-list-item routerLink="/multi-ng-model">Multiple ngModel</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
